--- a/nginx.conf
+++ b/nginx.conf
@@ -60,44 +60,85 @@ http {
 
 	include /etc/nginx/conf.d/*.conf;
 	include /etc/nginx/sites-enabled/*;
-        
+
         server {
                  listen 80;
                  server_name ~^checkin.*\.langhauserverse\.com$;
 
                  location / {
-                  proxy_pass http://tough-variety-126419.appspot.com/sign_in;
-		 }
+                  proxy_pass http://www.check-me-in.biz/sign_in;
+									}
 
-		 location /css/ {
-                   proxy_pass http://tough-variety-126419.appspot.com/css/;
-		 }
-                 
-		 location /img/ {
-                   proxy_pass http://tough-variety-126419.appspot.com/img/;
+		 							location /css/ {
+                   	proxy_pass http://www.check-me-in.biz/css/;
+		 							}
+
+		 							location /img/ {
+                   proxy_pass http://www.check-me-in.biz/img/;
+                  }
+
+		 						  location /js/ {
+                   proxy_pass http://www.check-me-in.biz/js/;
                  }
+	       		}
 
-		 location /js/ {
-                   proxy_pass http://tough-variety-126419.appspot.com/js/;
-                 }
+						server {
+										 listen 80;
+										 server_name ~^checkin.*\.cs4ri\.org$;
 
-	       }
+										 location / {
+											proxy_pass http://www.check-me-in.biz/cs4ri-summit-2016/;
+											}
+
+											location /css/ {
+												proxy_pass http://www.check-me-in.biz/css/;
+											}
+
+											location /img/ {
+											 proxy_pass http://www.check-me-in.biz/img/;
+											}
+
+											location /js/ {
+											 proxy_pass http://www.check-me-in.biz/js/;
+										 }
+								}
+						server {
+												 listen 80;
+												 server_name ~^cs4ri.*\.check-me-in\.biz$;
+
+												 location / {
+													proxy_pass http://www.check-me-in.biz/cs4ri-summit-2016/;
+													}
+
+													location /css/ {
+														proxy_pass http://www.check-me-in.biz/css/;
+													}
+
+													location /img/ {
+													 proxy_pass http://www.check-me-in.biz/img/;
+													}
+
+													location /js/ {
+													 proxy_pass http://www.check-me-in.biz/js/;
+												 }
+										}
+
 
     }
 #mail {
 #	# See sample authentication script at:
 #	# http://wiki.nginx.org/ImapAuthenticateWithApachePhpScript
-# 
+#
 #	# auth_http localhost/auth.php;
 #	# pop3_capabilities "TOP" "USER";
 #	# imap_capabilities "IMAP4rev1" "UIDPLUS";
-# 
+#
 #	server {
 #		listen     localhost:110;
 #		protocol   pop3;
 #		proxy      on;
 #	}
-# 
+#
 #	server {
 #		listen     localhost:143;
 #		protocol   imap;
