lots of work hardening routes and correcting missing deployment areas. Also sorted out bulk upload for visitors and fixed up sign-ins and checkins

--- a/nginx.conf
+++ b/nginx.conf
@@ -87,7 +87,7 @@ http {
 										 server_name ~^checkin.*\.cs4ri\.org$;
 
 										 location / {
-											proxy_pass http://www.check-me-in.biz/cs4ri-summit-2016/;
+											proxy_pass http://www.check-me-in.biz/deployments/view/cs4ri-summit-2016/;
 											}
 
 											location /css/ {
@@ -107,7 +107,7 @@ http {
 												 server_name ~^cs4ri.*\.check-me-in\.biz$;
 
 												 location / {
-													proxy_pass http://www.check-me-in.biz/cs4ri-summit-2016/;
+													proxy_pass http://www.check-me-in.biz/deployments/view/cs4ri-summit-2016/;
 													}
 
 													location /css/ {
