adding in fix for sign in redirect for checkins and tentative fix to nginx gateway

--- a/nginx.conf
+++ b/nginx.conf
@@ -88,6 +88,7 @@ http {
 
 										 location / {
 											proxy_pass http://www.check-me-in.biz/deployments/view/cs4ri-summit-2016/;
+											proxy_set_header X-Custom-Referrer "checkin.cs4ri.org";
 											}
 
 											location /css/ {
