improved admin management, cleaning up routes, moved sample student outside paywall

--- a/nginx.conf
+++ b/nginx.conf
@@ -67,6 +67,7 @@ http {
 
                  location / {
                   proxy_pass http://www.check-me-in.biz/sign_in;
+									proxy_set_header X-Custom-Referrer $request_uri;
 									}
 
 		 							location /css/ {
@@ -88,7 +89,6 @@ http {
 
 										 location / {
 											proxy_pass http://www.check-me-in.biz/deployments/view/cs4ri-summit-2016/;
-											proxy_set_header X-Custom-Referrer "checkin.cs4ri.org";
 											}
 
 											location /css/ {
