--- a/checkin/app.yaml
+++ b/checkin/app.yaml
@@ -37,13 +37,13 @@ libraries:
 builtins:
 - remote_api: on
 
-inbound_services:
-- warmup
-
-instance_class: F4_1G
-automatic_scaling:
- min_idle_instances: 1
- max_idle_instances: automatic  # default value
- min_pending_latency: 30ms  # default value
- max_pending_latency: automatic
- max_concurrent_requests: 50
+# inbound_services:
+# - warmup
+#
+# instance_class: F4_1G
+# automatic_scaling:
+#  min_idle_instances: 1
+#  max_idle_instances: automatic  # default value
+#  min_pending_latency: 30ms  # default value
+#  max_pending_latency: automatic
+#  max_concurrent_requests: 50
