--- a/checkin/index.yaml
+++ b/checkin/index.yaml
@@ -13,3 +13,8 @@ indexes:
 # manually, move them above the marker line.  The index.yaml file is
 # automatically uploaded to the admin console when you next deploy
 # your application using appcfg.py.
+
+- kind: MapUserToDeployment
+  properties:
+  - name: deployment_key
+  - name: user_key
