fixing up bulk upload of users

--- a/checkin/index.yaml
+++ b/checkin/index.yaml
@@ -18,3 +18,8 @@ indexes:
   properties:
   - name: deployment_key
   - name: user_key
+
+- kind: Visitor
+  properties:
+  - name: deployment_key
+  - name: serialized_id
