--- a/checkin/app.yaml
+++ b/checkin/app.yaml
@@ -2,13 +2,26 @@ application: tough-variety-126419
 version: 6
 runtime: python27
 api_version: 1
-threadsafe: yes
+threadsafe: false
+instance_class: F4_1G
 
+automatic_scaling:
+ min_idle_instances: 3
+ max_idle_instances: automatic  # default value
+ min_pending_latency: 30ms  # default value
+ max_pending_latency: automatic
+ max_concurrent_requests: 50
+
+inbound_services:
+- warmup
 
 handlers:
 - url: /_ah/queue/deferred
   script: google.appengine.ext.deferred.deferred.application
   login: admin
+
+- url: /tasks/update_visitor
+  script: worker.app
 
 - url: /admin/.*
   script: google.appengine.ext.admin.application
@@ -48,14 +61,3 @@ skip_files:
 builtins:
 - remote_api: on
 - deferred: on
-
-inbound_services:
-- warmup
-
-instance_class: F4_1G
-automatic_scaling:
- min_idle_instances: 1
- max_idle_instances: automatic  # default value
- min_pending_latency: 30ms  # default value
- max_pending_latency: automatic
- max_concurrent_requests: 50
