--- a/nginx.conf
+++ b/nginx.conf
@@ -123,6 +123,46 @@ http {
 													 proxy_pass http://www.check-me-in.biz/js/;
 												 }
 										}
+							server {
+													 listen 80;
+													 server_name ~^BayArea.*\.tealscsfair\.org$;
+
+													 location / {
+														proxy_pass http://www.check-me-in.biz/deployments/view/bay-area-2017/;
+														}
+
+														location /css/ {
+															proxy_pass http://www.check-me-in.biz/css/;
+														}
+
+														location /img/ {
+														 proxy_pass http://www.check-me-in.biz/img/;
+														}
+
+														location /js/ {
+														 proxy_pass http://www.check-me-in.biz/js/;
+													 }
+											}
+									server {
+															 listen 80;
+															 server_name ~^wa.*\.tealscsfair\.org$;
+
+															 location / {
+																proxy_pass http://www.check-me-in.biz/deployments/view/redmond-2017/;
+																}
+
+																location /css/ {
+																	proxy_pass http://www.check-me-in.biz/css/;
+																}
+
+																location /img/ {
+																 proxy_pass http://www.check-me-in.biz/img/;
+																}
+
+																location /js/ {
+																 proxy_pass http://www.check-me-in.biz/js/;
+															 }
+													}
 
 
     }
