making logins deployment specific

--- a/checkin/cron.yaml
+++ b/checkin/cron.yaml
@@ -1,4 +1,5 @@
 cron:
-- description: Map Index Update
-  url: /api/tasks/update_map_user_indices/
-  schedule: every 1 minutes
+# - description: Map Index Update
+#   url: /api/tasks/update_map_user_indices/
+#   schedule: every sunday 09:00
+#   timezone: America/New_York
