--- a/nginx.conf
+++ b/nginx.conf
@@ -61,6 +61,27 @@ http {
 	include /etc/nginx/conf.d/*.conf;
 	include /etc/nginx/sites-enabled/*;
 
+						server {
+										 listen 80;
+										 server_name ~^checkin.*\.csfair\.nyc$;
+
+										 location / {
+										  proxy_pass http://www.check-me-in.biz/deployments/view/nyc-csfair-2017/;
+										  }
+
+											location /css/ {
+												proxy_pass http://www.check-me-in.biz/css/;
+											}
+
+											location /img/ {
+											 proxy_pass http://www.check-me-in.biz/img/;
+											}
+
+											location /js/ {
+											 proxy_pass http://www.check-me-in.biz/js/;
+										 }
+								}
+
         server {
                  listen 80;
                  server_name ~^checkin.*\.langhauserverse\.com$;
