--- a/checkin/app.yaml
+++ b/checkin/app.yaml
@@ -3,14 +3,14 @@ version: 6
 runtime: python27
 api_version: 1
 threadsafe: false
-# instance_class: F4_1G
+instance_class: F4_1G
 
-# automatic_scaling:
-#  min_idle_instances: 3
-#  max_idle_instances: automatic  # default value
-#  min_pending_latency: 30ms  # default value
-#  max_pending_latency: automatic
-#  max_concurrent_requests: 50
+automatic_scaling:
+ min_idle_instances: 0
+ max_idle_instances: automatic  # default value
+ min_pending_latency: 30ms  # default value
+ max_pending_latency: automatic
+ max_concurrent_requests: 50
 
 inbound_services:
 - warmup
