--- a/checkin/app.yaml
+++ b/checkin/app.yaml
@@ -2,15 +2,18 @@ application: tough-variety-126419
 version: 6
 runtime: python27
 api_version: 1
-threadsafe: false
-instance_class: F4_1G
+threadsafe: true
+instance_class: B4_1G #F4_1G
 
-automatic_scaling:
- min_idle_instances: 0
- max_idle_instances: automatic  # default value
- min_pending_latency: 30ms  # default value
- max_pending_latency: automatic
- max_concurrent_requests: 50
+basic_scaling:
+  max_instances: 1
+  idle_timeout: 10m
+# automatic_scaling:
+#  min_idle_instances: 0
+#  max_idle_instances: automatic  # default value
+#  min_pending_latency: 30ms  # default value
+#  max_pending_latency: automatic
+#  max_concurrent_requests: 50
 
 inbound_services:
 - warmup
